--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.1.4",
     "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0"
+    "@types/react-dom": "^16.9.0",
+    "react-test-renderer": "^16.9.0"
   }
 }
