--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.1.4",
+    "@types/node-fetch": "^2.5.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0"
